--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       class="h-[calc(100vh-102px)] flex flex-col justify-center items-center"
     >
       <div class="gradient-shadow">
-        <img class="rounded-full w-[200px]" src="./Assets/Haris1.jpg" alt="" />
+        <img class="rounded-full w-[200px]" src="./Assets/Haris.jpg" alt="" />
       </div>
       <p class="text-3xl font-semibold mt-9">MD Alimuzzaman Haris</p>
       <h1 class="text-7xl font-black text-[#1C1D25] mt-3 mb-8">The MERN Expert.</h1>
