Added shadow rotation feature

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       }
     </style>
   </head>
-  <body class="containeer font-noto-sans text-[#1D1D1F] select-none">
+  <body class="px-3 containeer font-noto-sans text-[#1D1D1F] select-none">
     <header class="py-5 border-b-2">
       <nav class="flex justify-around items-center">
         <h2 class="text-5xl font-black text-[#8a2be2]">
