--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
     <style>
       .font-noto-sans {
         font-family: "Noto Sans", sans-serif;
@@ -59,16 +60,16 @@
     </style>
   </head>
   <body class="px-3 containeer font-noto-sans text-[#1D1D1F] select-none">
-    <header class="py-5 border-b-2">
+    <header class="py-2 border-b-2">
       <nav class="flex justify-around items-center">
-        <h2 class="text-5xl font-black text-[#8a2be2]">
+        <h2 class="text-4xl font-black text-[#8a2be2]">
           Ha<span class="text-red-500">r</span>is
         </h2>
         <div>
-          <a class="text-xl text-blue-950 p-4" href="index.html">Profile</a>
-          <a class="text-xl text-blue-950 p-4" href="about.html">About</a>
-          <a class="text-xl text-blue-950 p-4" href="projects.html">Projects</a>
-          <a class="text-xl text-blue-950 p-4" href="contact.html">Contact</a>
+          <a class="text-md text-blue-950 p-4" href="index.html">Profile</a>
+          <a class="text-md text-blue-950 p-4" href="about.html">About</a>
+          <a class="text-md text-blue-950 p-4" href="projects.html">Projects</a>
+          <a class="text-md text-blue-950 p-4" href="contact.html">Contact</a>
         </div>
         <a
           class="text-xl text-blue-600"
