--- a/projects.html
+++ b/projects.html
@@ -86,6 +86,7 @@
       </div>
       <p class="text-3xl font-semibold mt-9">MD Alimuzzaman Haris</p>
       <h1 class="text-7xl font-black text-[#1C1D25] mt-3 mb-8">The MERN Expert.</h1>
+      <h1 class="text-7xl font-black text-[#1C1D25] mt-3 mb-8">The MERN Expert.</h1>
       <a
           class="text-xl text-blue-600"
           href="https://www.fiverr.com/alim_haris/convert-figma-to-html-xd-to-html-psd-to-html-with-responsive"
