--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
     <style>
       .font-noto-sans {
         font-family: "Noto Sans", sans-serif;
@@ -58,17 +59,17 @@
       }
     </style>
   </head>
-  <body class="containeer font-noto-sans text-[#1D1D1F] select-none">
-    <header class="py-5 border-b-2">
+  <body class="px-3 containeer font-noto-sans text-[#1D1D1F] select-none">
+    <header class="py-2 border-b-2">
       <nav class="flex justify-around items-center">
-        <h2 class="text-5xl font-black text-[#8a2be2]">
+        <h2 class="text-4xl font-black text-[#8a2be2]">
           Ha<span class="text-red-500">r</span>is
         </h2>
         <div>
-          <a class="text-xl text-blue-950 p-4" href="index.html">Profile</a>
-          <a class="text-xl text-blue-950 p-4" href="about.html">About</a>
-          <a class="text-xl text-blue-950 p-4" href="projects.html">Projects</a>
-          <a class="text-xl text-blue-950 p-4" href="contact.html">Contact</a>
+          <a class="text-md text-blue-950 p-4" href="index.html">Profile</a>
+          <a class="text-md text-blue-950 p-4" href="about.html">About</a>
+          <a class="text-md text-blue-950 p-4" href="projects.html">Projects</a>
+          <a class="text-md text-blue-950 p-4" href="contact.html">Contact</a>
         </div>
         <a
           class="text-xl text-blue-600"
@@ -85,7 +86,6 @@
         <img class="rounded-full w-[200px]" src="./Assets/Haris.jpg" alt="" />
       </div>
       <p class="text-3xl font-semibold mt-9">MD Alimuzzaman Haris</p>
-      <h1 class="text-7xl font-black text-[#1C1D25] mt-3 mb-8">The MERN Expert.</h1>
       <h1 class="text-7xl font-black text-[#1C1D25] mt-3 mb-8">The MERN Expert.</h1>
       <a
           class="text-xl text-blue-600"
